# focus-guardian

./: README.md  START-HERE.md  config.example.json  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: focus-guardian.mdc
docs/: MCP.md  SLACK.md
focus_guardian/: analyzer.py  cli.py  coach.py  coach_context.py  drift_config.py  focus.py  guardian.py  llm.py  mcp_server.py  monitor.py  notify.py  paths.py  review.py  review_scheduler.py  simulate.py  slack_bot.py  slack_client.py  slack_commands.py  slack_setup.py  snooze.py  synthesis.py
scripts/: com.focusguardian.slack.plist.template  install-launchd.sh  start-all.sh
